cambia detalle endpoint device
